# ci-cd

.github/workflows/: c_ci.yml  ci.yml
c-app/: CMakeLists.txt  calculator.cpp  calculator.h  test_calculator.cpp
python-app/: calculator.py  test_calculator.py
